samples/_failures_safe/1761533771_cf3ac9_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_ee37f35a.c: In function ‘main’:
./samples/SAFE/__tmp_ee37f35a.c:147:12: error: missing terminating " character
  147 |     printf("
      |            ^
./samples/SAFE/__tmp_ee37f35a.c:147:5: error: expected expression at end of input
  147 |     printf("
      |     ^~~~~~
./samples/SAFE/__tmp_ee37f35a.c:147:5: error: expected declaration or statement at end of input
